# A-Engine

./: .gitignore  CMakeLists.txt
models/: cube.glb  monkey.glb
shaders/: simple.frag  simple.vert
src/: main.cpp
src/core/: CMakeLists.txt  core.h  hash.h  os.cpp  os.h
src/core/container/: array.h  hash_map.h
src/core/ecs/: components.h  ecs.h  isystem.h
src/core/hash/: hash.cpp
src/core/memory/: allocator.h  core.h  default_allocator.cpp  default_allocator.h  span.h  unique_ptr.h
src/core/plugin/: iplugin.h
src/core/resource/: i_resource_importer.h  resource.h  resource_manager.cpp  resource_manager.h
src/core/scene/: camera.cpp  camera.h  game_object.h  scene.cpp  scene.h  transform.h
src/core/string/: string.cpp  string.h
src/core/subsystem/: isubsystem.cpp  isubsystem.h
src/core/world/: world.cpp  world.h  world_manager.cpp  world_manager.h
src/editor/: CMakeLists.txt  editor.cpp  editor.h  scene_view.cpp  scene_view.h
src/editor/ui/: editor_ui.cpp  editor_ui.h  file_browser.cpp  file_browser.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  game_plugin.cpp  game_plugin.h  game_system.cpp  game_system.h
src/main/: CMakeLists.txt  main.cpp
src/platform/: platform_subsystem.cpp  platform_subsystem.h
src/plugins/: CMakeLists.txt
src/plugins/TestLogPlugin/: CMakeLists.txt  TestLogPlugin.cpp  TestLogPlugin.h
src/plugins/gltf_importer/: CMakeLists.txt  gltf_importer.cpp  gltf_importer.h  gltf_importer_plugin.cpp  gltf_importer_plugin.h
src/renderer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  gltf_importer.cpp  gltf_importer.h  mesh.cpp  mesh.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  renderer_plugin.cpp  renderer_plugin.h  texture.cpp  texture.h
